# aihero

course/: PyTorch_Repo_Project.ipynb  data_prep.ipynb  pyproject.toml
course/.ipynb_checkpoints/: data_prep-checkpoint.ipynb
